# raug

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: bench.rs  caterpillar.rs  generative1.rs
crates/raug/: Cargo.toml  README.md
crates/raug-ext/: Cargo.toml
crates/raug-ext/examples/: caterpillar.rs  rave.rs
crates/raug-ext/src/: graph.rs  lib.rs  node.rs  osc.rs
crates/raug-ext/src/processors/: filters.rs  math.rs  oscillators.rs  storage.rs  time.rs
crates/raug-graph/: Cargo.toml
crates/raug-graph/src/: builder.rs  graph.rs  lib.rs  node.rs
crates/raug-macros/src/: lib.rs  processor_attribute.rs  wrap_wasm.rs
crates/raug-macros/tests/: processor_attr.rs
crates/raug-wasm/: Cargo.toml  index.html  index.js  raug-worker.js  serve.py  wasm-graph-handler.js
crates/raug-wasm/examples/demo/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/raug-wasm/examples/demo/src/: edge.tsx  editor.ts  editor.tsx  graph-handler.ts  index.css  index.ts  index.tsx  log.ts  log.tsx  number-node.tsx  raug-worker.ts
crates/raug-wasm/examples/demo/src/nodes/: dac-node.tsx  number-node.tsx  processor-node.tsx
crates/raug-wasm/examples/demo/src/nodes/utils/: drag-number.tsx
crates/raug-wasm/examples/editor/: README.md  index.html  package.json  vite.config.ts
crates/raug-wasm/examples/editor/src/: edge.tsx  editor.tsx  graph-handler.ts  index.css  index.tsx  raug-worker.ts
crates/raug-wasm/examples/editor/src/components/ui/: number-scrubber.tsx
crates/raug-wasm/examples/editor/src/nodes/: dac-node.tsx  number-node.tsx  pitch-node.tsx
crates/raug-wasm/src/: lib.rs
crates/raug-wasm/src/builtins/: mod.rs
crates/raug/benches/: bench.rs  common.rs
crates/raug/examples/: bench.rs  caterpillar.rs  demo.rs  midi-osc-server.py  playing_around.rs
crates/raug/notes/: raug devlog 1.md
crates/raug/src/: lib.rs
crates/raug/src/builtins/: math.rs  util.rs
crates/raug/src/graph/: builder.rs  expr.rs  mod.rs  node.rs  playback.rs  sub_graph.rs
crates/raug/src/graph/runtime/: mod.rs
crates/raug/src/processor/: io.rs  mod.rs
crates/raug/src/signal/: mod.rs  type_erased.rs
crates/raug/src/util/: interned_strings.rs  mod.rs  sync.rs
examples/: caterpillar.rs  demo.rs  midi_in.rs  processor.rs
src/: lib.rs  midi.rs  processor.rs  runtime.rs  signal.rs  util.rs
src/builder/: node_builder.rs
src/builtins/: control.rs  dynamics.rs  filters.rs  math.rs  midi.rs  mod.rs  oscillators.rs  param.rs  simple_fft.rs  storage.rs  time.rs  util.rs
src/fft/: builder.rs  graph.rs  mod.rs  signal.rs
src/fft/builtins/: real.rs  util.rs
src/graph/: asset.rs  edge.rs  mod.rs  node.rs  sub_graph.rs
src/graph/runtime/: mod.rs
src/processor/: io.rs  mod.rs
src/signal/: allocator.rs  buffer.rs  mod.rs  optional.rs  repr.rs  type_erased.rs
