[package]
name = "raug"
description = "raug - Rusty Audio Graphs"
license = "MIT OR Apache-2.0"
version = "0.0.4"
edition = "2024"
documentation = "https://docs.rs/raug"
repository = "https://github.com/clstatham/raug"

[lib]
name = "raug"

[features]
default = []
jack = ["cpal/jack"]
profiling = ["dep:allocation-counter"]

[dependencies]
cpal = { version = "0.15.3", features = [] }
itertools = "0.14"
log = "0.4.22"
petgraph = { version = "0.8", features = [] }
hound = "3.5"
thiserror = "2.0"
downcast-rs = "2.0"
rustc-hash = "2"
hashbrown = "0.15"
crossbeam-channel = "0.5"
smallvec = "1.13.2"
raug-macros = { path = "../raug-macros" }
allocation-counter = { version = "0.8", optional = true }
any_vec = "0.14.0"
bumpalo = { version = "3.17", features = ["allocator-api2", "std"] }
allocator-api2 = "0.2"

[dev-dependencies]
env_logger = "0.11"
criterion = { version = "0.5", features = ["html_reports"] }
raug-ext = { path = "../raug-ext" }

[[bench]]
name = "bench"
harness = false
