[package]
name = "raug-ext"
version = "0.1.0"
edition = "2024"

[features]
default = []
osc = ["dep:rosc"]

[dependencies]
crossbeam-channel = "0.5"
hound = "3.5"
rand = "0.9"
raug = { path = "../raug" }
thiserror = "2.0"
rosc = { version = "0.11.4", optional = true }

[dev-dependencies]
env_logger = "*"
raug = { path = "../raug", features = ["playback"] }
