[package]
name = "raug-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
raug = { path = "../raug", default-features = false, features = [] }
raug-ext = { path = "../raug-ext" }
wasm-bindgen = "0.2"
getrandom = { version = "*", features = ["wasm_js"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = ["console"]


[dependencies.js-sys]
version = "0.3"
